--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div class="vid-container">
-    <img src="Untitled design.gif" id="background-video">
+    <video autoplay loop muted playsinline id="background-video">
+      <source src="Untitled video - Made with Clipchamp (1).mp4" type="video/mp4">
+    </video>
 
     <img src="logo.png" id="eulalogo">
     
