--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="vid-container">
     <video autoplay loop muted playsinline id="background-video">
-      <source src="Untitled video - Made with Clipchamp (1).mp4" type="video/mp4">
+      <source src="https://raw.githubusercontent.com/yourusername/your-repository-name/main/Untitled%20video%20-%20Made%20with%20Clipchamp%20(1).mp4" type="video/mp4">
     </video>
 
     <img src="logo.png" id="eulalogo">
